--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "João Paulo",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "nunjucks": "^3.2.2",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "5.2.1"
   }
 }
